Remove Description duplicate and fixed misalignment from description.

--- a/client/app/dashboard/model/edit/ModelEdit.styl
+++ b/client/app/dashboard/model/edit/ModelEdit.styl
@@ -28,6 +28,7 @@
 model-field-reference-edit
   display block
   border-radius 4px
+  margin-bottom 10px
   .close
     padding-top 2px
             
